# streamlit-annotation-roleplaydoh

./: .gitignore  data_annotation_interface.py  data_utils.py  pyproject.toml  secrets.toml
.devcontainer/: devcontainer.json
data/: annotation_test.json  errors_test.json  state.json  state_ananjan.json
